# tokenspeed

./: AGENTS.md  CLAUDE.md
.github/workflows/: pr-test.yml  release-tokenspeed-kernel.yml  update-tokenspeed-kernel-flashinfer.yml  update-tokenspeed-kernel-mla.yml  update-tokenspeed-mla-version.yml
.skills/: bisect-triton-release.md  optimize-amd-gpu-kernel.md
docs/configuration/: compatible-parameters.md  server.md
docs/guides/: getting-started.md  launching.md
docs/recipes/: models.md
docs/serving/: deepseek-v4.md
python/: pyproject.toml
scripts/: bench_hima.sh
test/: runners.py  test_bench_timeout.py  test_e2e_hima.py  test_e2e_hima_infer.py  test_e2e_xpool.py  test_smoke_python_hima.py  test_stress_xpool.py  test_utils.py
test/ci/: README.md
tokenspeed-kernel/: README.md
tokenspeed-kernel-amd/: LICENSE  README.md  THIRDPARTYNOTICES  pyproject.toml
tokenspeed-kernel-amd/python/tokenspeed_kernel_amd/: _triton.py
tokenspeed-kernel-amd/python/tokenspeed_kernel_amd/ops/attention/gluon/: __init__.py  mha_decode_fp16_gfx950.py  mha_prefill_fp16_gfx950.py  utils.py
tokenspeed-kernel-amd/python/tokenspeed_kernel_amd/ops/moe/: fused_mxfp_gfx950.py
tokenspeed-kernel-amd/python/tokenspeed_kernel_amd/ops/sampling/gluon/: __init__.py  argmax_gfx950.py
tokenspeed-kernel-amd/test/: test_no_triton_kernels_dependency.py
tokenspeed-kernel-amd/test/ops/: test_moe_gluon_warp_decode_gfx950.py  test_sampling_gluon_gfx950.py
tokenspeed-mla/: README.md  pyproject.toml
tokenspeed-scheduler/: CMakeLists.txt
tools/: calibrate_kappa.py  filter_trace.py
(+705 files in other folders)
